--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.1.3",
     "gulp-sass": "^4.0.2",
     "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
     "animate.css": "^3.7.2",
+    "dotenv": "^16.0.0",
     "font-awesome": "^4.7.0",
     "waypoints": "^4.0.1"
   }
