updating package.json and removing psd files

--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "wedding-website",
+  "name": "david4crystal",
   "version": "1.0.1",
   "description": "A wedding website with loads of features.",
-  "main": "npmfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com:rampatra/wedding-website.git"
+    "url": "git@github.com:davidtamaki/david4crystal.git"
   },
   "keywords": [
     "wedding",
     "template",
     "website template"
   ],
-  "author": "Ram Patra",
+  "author": "David Szajngarten",
+  "contributors": [
+    {
+      "name" : "Ram Patra",
+      "url" : "https://github.com/rampatra/wedding-website"
+    }
+   ],
   "license": "GPL-3.0",
-  "homepage": "https://github.com/rampatra/wedding-website",
+  "homepage": "https://github.com/davidtamaki/david4crystal",
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-rename": "^1.4.0",
